Closed Bug 590695 Opened 14 years ago Closed 14 years ago

Crash in [@ mozilla::layers::DeviceManagerD3D9::Init() ] in Firefox 4.0b4

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta7+

People

(Reporter: marcia, Assigned: bas.schouten)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Seen while reviewing the new Firefox B4 crashes. http://tinyurl.com/2495y7a links to the crashes, which are all Windows. I have not been able to reproduce on Windows 7 using either B4 or the trunk.

The 3 comments all mention crashing while viewing an HTML5 video in Full screen.

Frame  	Module  	Signature [Expand]  	Source
0 	xul.dll 	mozilla::layers::DeviceManagerD3D9::Init 	gfx/layers/d3d9/DeviceManagerD3D9.cpp:269
1 	xul.dll 	mozilla::layers::LayerManagerD3D9::Initialize 	gfx/layers/d3d9/LayerManagerD3D9.cpp:76
2 	xul.dll 	PresShell::DocumentStatesChanged 	layout/base/nsPresShell.cpp:4940
3 	xul.dll 	nsDocument::DocumentStatesChanged 	content/base/src/nsDocument.cpp:4109
4 	xul.dll 	NotifyDocumentTree 	dom/base/nsGlobalWindow.cpp:6897
5 	xul.dll 	nsGlobalWindow::SetActive 	dom/base/nsGlobalWindow.cpp:6905
6 	xul.dll 	nsGlobalWindow::ActivateOrDeactivate 	dom/base/nsGlobalWindow.cpp:6889
7 	xul.dll 	nsXULWindow::GetEnabled 	xpfe/appshell/src/nsXULWindow.cpp:839
8 	xul.dll 	nsFocusManager::WindowRaised 	dom/base/nsFocusManager.cpp:669
9 	xul.dll 	nsCOMPtr_base::assign_from_gs_contractid 	obj-firefox/xpcom/build/nsCOMPtr.cpp:132
10 	xul.dll 	nsWebShellWindow::HandleEvent 	xpfe/appshell/src/nsWebShellWindow.cpp:436
11 	user32.dll 	ImeSystemHandler
Summary: Crash in [@ mozilla::layers::DeviceManagerD3D9::Init() ] in Firefox Beta 4 → Crash in [@ mozilla::layers::DeviceManagerD3D9::Init() ] in Firefox 4.0b4
Mozilla/5.0 (Windows NT 6.1; rv:2.0b4) Gecko/20100818 Firefox/4.0b4
Able to reproduce the crash in firefox beta 4 when playing html5 videos

http://crash-stats.mozilla.com/report/index/bp-3fecf9d1-4269-4820-82be-7b6972100830
http://crash-stats.mozilla.com/report/index/a1caac58-7b84-4f08-baf2-5fa4b2100830
Regression range: 

Build Worked : 
Mozilla/5.0 (Windows NT 6.1; rv:2.0b4pre) Gecko/20100810 Minefield/4.0b4pre

Build Broken : 
Mozilla/5.0 (Windows NT 6.1; rv:2.0b4pre) Gecko/20100811 Minefield/4.0b4pre

Pushlog : 
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=905529619219
&tochange=ba956b17d834
I was able to reproduce the crash while viewing this video in full screen mode. Click on Watch Video and Download in WebM format. 
http://www.mozilla.com/en-US/firefox/4.0b4/firstrun/
I get this crash bug everytime I startup Minefield when layers.accelerate.all is set to true in about:config.

Happens only on my Netbook, not on my Desktop PC. Some others also get it with Netbooks. So I assume it's a problem with Intel Graphics.

Crashes on:
Intel ATOM N270 System with
Intel 945GSE Express Chipset (integrated Intel GMA 950 graphics @ 166mhz). Latest driver from Intel is installed. Nothing is overclocked.

The other user got an Intel GMA 3150 and it crashes also on startup.
See: http://forums.mozillazine.org/viewtopic.php?p=9845807#p9845807
255    hr = mD3D9Ex->CreateDeviceEx(D3DADAPTER_DEFAULT,
263                                 getter_AddRefs(mDeviceEx));
264    if (SUCCEEDED(hr)) {
265      mDevice = mDeviceEx;

269    if (mDeviceEx->GetDeviceCaps(&caps)) {

this code is obviously wrong.
Blocks: 584754
OS: Windows 7 → Windows XP
(In reply to comment #5)
> I get this crash bug everytime I startup Minefield when layers.accelerate.all
> is set to true in about:config.
> 
> Happens only on my Netbook, not on my Desktop PC. Some others also get it with
> Netbooks. So I assume it's a problem with Intel Graphics.
> 
> Crashes on:
> Intel ATOM N270 System with
> Intel 945GSE Express Chipset (integrated Intel GMA 950 graphics @ 166mhz).
> Latest driver from Intel is installed. Nothing is overclocked.
> 
> The other user got an Intel GMA 3150 and it crashes also on startup.
> See: http://forums.mozillazine.org/viewtopic.php?p=9845807#p9845807

I am that other user and I can confirm that the crashes occur here as well.

Crashes on:
Intel Atom N475 Processor clocked at 1.83 GHz
Intel GMA 3150
Latest drivers from Intel and nothing is overclocked.

This does not occur on my standard notebook which runs:
Intel Core 2 Duo Processor clocked at 2.00 GHz
Intel GM 965
Latest drivers from Intel and nothing is overclocked.
Component: Layout → Graphics
QA Contact: layout → thebes
The code is quite obviously wrong. Sadly I missed this bug because it was in the wrong component :(. Here's a fix.
Assignee: nobody → bas.schouten
Status: NEW → ASSIGNED
Attachment #472275 - Flags: review?(jmuizelaar)
Blocks: d3d9-layers
blocking2.0: --- → ?
http://hg.mozilla.org/mozilla-central/rev/5712311f8659
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Crashes still persist, but it isn't the same thing causing it. So it's looking good.

For reference:
http://crash-stats.mozilla.com/report/index/db8133c8-ad8e-4c3d-9b8c-fbd722100905
No symbols there, I wonder why.
Do hourlies upload symbols?
(In reply to comment #10)
> Crashes still persist, but it isn't the same thing causing it. So it's looking
> good.
> 
> For reference:
> http://crash-stats.mozilla.com/report/index/db8133c8-ad8e-4c3d-9b8c-fbd722100905

this build does not include this bug fix.
so useless.

and Hourly have no symbols.
Latest hourly includes this fix. I tried it and it works. No more crash at startup with layers.accelerate-all set to true.

So it's fixed.
Crash Signature: [@ mozilla::layers::DeviceManagerD3D9::Init() ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: