Bug 590695: Don't check mDeviceEx when it doesn't exist. r=vlad a=blocking-beta6